--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.3",
-    "express": "^4.15.3"
+    "express": "^4.15.3",
+    "moment": "^2.18.1"
   }
 }
