--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
     "cors": "^2.8.3",
     "express": "^4.15.3",
     "moment": "^2.18.1"
+  },
+  "devDependencies": {
+    "flightplan": "^0.6.17"
   }
 }
