--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "REST API server for storing BlogPosts.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start-prod": "NODE_ENV=production node ./index.js"
   },
   "author": "Vlad Filiucov",
   "license": "ISC",
